[package]
name = "sse-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
axum = "0.7.3"
axum-valid = { version = "0.15.0", features = ["into_json"] }
chrono = "0.4.33"
fake = "2.9.2"
futures = "0.3.30"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
tokio = "1.28.2"
tracing = "0.1.40"
uuid = "1.7.0"
validator = { version = "0.16.1", features = ["derive"] }
