[package]
name = "sse-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
axum = "0.7.4"
axum-valid = { version = "0.21.0", features = ["into_json"] }
chrono = "0.4.33"
fake = { version = "3.1.0", features = ["random_color"] }
futures = "0.3.30"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.7.0", features = ["v4"] }
validator = { version = "0.19.0", features = ["derive"] }
